Email with MS Graph API instead of SMTP basic auth use Powershell 7 when possible updated PostgreSQL table configuration updated various scripts update README